Added the URL Extension to Twig.

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 		<nav>
 			<ul>
 				<li><a href="{% url home %}" title="">Home</a></li>
-				<li><a href="{% url example %}" title="">Example</a></li>
+				<li><a href="{% url example 12 %}" title="">Example</a></li>
 				<li><a href="{% url contact %}" title="">Contact</a></li>
 			</ul>
 		</nav>
